Fixing address overflow issue

--- a/src/components/DriverApp/components/EndRide/RideEnd.css
+++ b/src/components/DriverApp/components/EndRide/RideEnd.css
@@ -99,3 +99,10 @@
   width: 100%;
   border: none;
 }
+
+.text-address {
+  white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 45ch;
+}
